frontend/src/pages/public/Index.css
.hero {
    display: flex;
    flex-flow: row wrap;

    align-items: center;
    justify-content: center;

    & .logo-container {
        width: 40%;

        @media (max-width: 30rem) {
            width: 60%;
        }
        
        & .logo {
            max-height: 100%;
            max-width: 100%;
        }
    }

    & .intro {
        box-sizing: border-box;
        width: 60%;
        padding: 2rem;

        @media (max-width: 30rem) {
            width: 100%;
            text-align: center;
        }

        & .action-link {
            display: flex;
            justify-content: center;
            margin-top: 3rem;
            font-size: larger;
        }
    }
}

.features {
    margin-top: 5rem;
    display: flex;
    flex-flow: column;
    align-items: center;
    padding: 1rem 2rem;
    gap: 1rem;

    & .feature {
        background-color: rgba(0, 0, 0, 0.733);
        border-radius: 2rem;

        display: flex;
        flex-flow: column nowrap;
        align-items: center;
        justify-content: center;

        & img {
            max-width: 80%;
            max-height: 80%;
        }
    }
    
}

